; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/stmicro/stmmac/extr_hwif.c_stmmac_get_id.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/stmicro/stmmac/extr_hwif.c_stmmac_get_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stmmac_priv = type { i32, i32 }

@.str = private unnamed_addr constant [26 x i8] c"Version ID not available\0A\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"User ID: 0x%x, Synopsys ID: 0x%x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.stmmac_priv*, i32)* @stmmac_get_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stmmac_get_id(%struct.stmmac_priv* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.stmmac_priv*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.stmmac_priv* %0, %struct.stmmac_priv** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.stmmac_priv*, %struct.stmmac_priv** %4, align 8
  %8 = getelementptr inbounds %struct.stmmac_priv, %struct.stmmac_priv* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = add nsw i32 %9, %10
  %12 = call i32 @readl(i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %20, label %15

15:                                               ; preds = %2
  %16 = load %struct.stmmac_priv*, %struct.stmmac_priv** %4, align 8
  %17 = getelementptr inbounds %struct.stmmac_priv, %struct.stmmac_priv* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = call i32 (i32, i8*, ...) @dev_info(i32 %18, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %35

20:                                               ; preds = %2
  %21 = load %struct.stmmac_priv*, %struct.stmmac_priv** %4, align 8
  %22 = getelementptr inbounds %struct.stmmac_priv, %struct.stmmac_priv* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @GENMASK(i32 15, i32 8)
  %26 = and i32 %24, %25
  %27 = lshr i32 %26, 8
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @GENMASK(i32 7, i32 0)
  %30 = and i32 %28, %29
  %31 = call i32 (i32, i8*, ...) @dev_info(i32 %23, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i32 %27, i32 %30)
  %32 = load i32, i32* %6, align 4
  %33 = call i32 @GENMASK(i32 7, i32 0)
  %34 = and i32 %32, %33
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %20, %15
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @readl(i32) #1

declare dso_local i32 @dev_info(i32, i8*, ...) #1

declare dso_local i32 @GENMASK(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
